--- a/Makefile.inc
+++ b/Makefile.inc
@@ -24,5 +24,5 @@ ALL += $(VENDING)
 
 $(VENDING) : CPPFLAGS += -pthread $(ZLIB_CPPFLAGS) $(GNUTLS_CPPFLAGS)
 $(VENDING) : LDLIBS += -lrt -lgmp -laio $(ZLIB_LDLIBS) $(GNUTLS_LDLIBS)
-$(VENDING) :: $(VENDING_OBJECTS)
+$(VENDING) : $(VENDING_OBJECTS)
 	$(DO_LINK.cpp)
